--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
         </ul>
         <hr>
 
-		<h2>
-			Welcome!
-		</h2>
 
+		<img src="images/sun.png" height="261px" width="450px" source = "text-align: center;">
 		<p>
+			Welcome!
+			Getting identification after prison shouldn&#x27t be hard. We&#x27re here to help
+			you navigate the entire process in all counties in California. Please
+			view the "Guidelines" page for more information! <br>In addition, check out our Job Search tab, which provides resources to make your job search easier!
+		</p>
+
+		<!-- <p>
 			Getting identification after prison shouldn&#x27t be hard. We&#x27re here to help
 			you navigate the entire process in all counties in California. Please
 			view the "Guidelines" page for more information!
@@ -31,9 +36,7 @@
 			<br><br>
 
 			In addition, check out our Job Search tab, which provides resources to make your job search easier!
-		</p>
-
-
+		</p> -->
 
 	</body>
 </html>
