--- a/html/jobSearch.html
+++ b/html/jobSearch.html
@@ -14,7 +14,7 @@
         <body>
                 <!-- Title bar showing name -->
                 <title>Hack for Humanity</title>
-                <h1><a style="text-decoration:none; font-size: 60px;" href= "../index.html">ReEntry Resort</a></h1>
+                <h1><a style="text-decoration:none; font-size: 60px;" href= "../index.html">Re-Entry Resort</a></h1>
                 <hr>
                 <!-- Navigation bar -->
                 <ul class="navigationBar">
