fixed problem w/ bullet pts

--- a/html/resources.html
+++ b/html/resources.html
@@ -42,14 +42,14 @@
 			Because of this, it cam be easier to have a close family member get your birth certificate, as they ecause family member can use their own ID to get it on your behalf.
 			Examples of close family members include:</br></br>
 
-		&middot Parents</br>
-		&middot Legal Guardians</br>
-		&middot Children</br>
-		&middot Grandparents</br>
-		&middot Grandchildren</br>
-		&middot Siblings</br>
-		&middot Spouses</br>
-		&middot Domestic Partners</p>
+		*Parents</br>
+		*Legal Guardians</br>
+		*Children</br>
+		*Grandparents</br>
+		*Grandchildren</br>
+		*Siblings</br>
+		*Spouses</br>
+		*Domestic Partners</p>
 
 		<p>
 			If you have any of these family members, we STRONGLY recommend asking them to help you obtain your birth certificate.
@@ -85,9 +85,9 @@
 			New social security cards must be obtained in person at your local Social Security Office. </br>
 
 			You must have the following items if when you go to the office: </br> </br>
-			&middot Proof of citizenship (birth certificate or passport) </br>
-			&middot Proof of age (religious record made before the age of 5 showing your date of birth, US hospital record of your birth, or passport) </br>
-			&middot Proof of identity (MediCal card, U.S. military ID, certificate of naturalization, health insurance card, certified copy of medical record, or student ID/record)
+			*Proof of citizenship (birth certificate or passport) </br>
+			*Proof of age (religious record made before the age of 5 showing your date of birth, US hospital record of your birth, or passport) </br>
+			*Proof of identity (MediCal card, U.S. military ID, certificate of naturalization, health insurance card, certified copy of medical record, or student ID/record)
 		</p>
 
 			<p> If you are having trouble locating a Social Security Office, use this interactive map to find one near you! </p>
@@ -291,10 +291,10 @@
 
 		<p>If you are renewing your ID in person, you will need to make sure you have the required documents.
 			Below, you can find a list of the documents you need: </br></br>
-			&middot Proof of identity (birth certificate or passport)</br>
-			&middot 2 California residency documents</br>
-			&middot Proof of your SSN</br>
-			&middot If your name is changing, you must also have a proof of name change document
+			*Proof of identity (birth certificate or passport)</br>
+			*2 California residency documents</br>
+			*Proof of your SSN</br>
+			*If your name is changing, you must also have a proof of name change document
 		</p>
 
 		<p> If you are having trouble locating a DMV, use this interactive map to find one near you!</p>
