--- a/html/search.html
+++ b/html/search.html
@@ -6,17 +6,17 @@
 	</head>
 	<body>
 		<!-- Title bar showing name -->
-		<title>Hack for Humanity</title>
-		<h1><a style="text-decoration:none; font-size: 60px;" href= "../index.html">Re-Entry Resort</a></h1>
+		<title>Re-Entry Hub</title>
+    <h1><a style="text-decoration:none; font-size: 60px;" href= "../index.html">Re-Entry Hub</a></h1>
 		<hr>
 
 		<!-- Navigation bar -->
 		<ul class="navigationBar">
-			<li><a style="text-decoration:none" href= "../index.html">Home</a></li>
-			<li><a style="text-decoration:none" href="resources.html"> ID Resources</a></li>
-			<li><a style="text-decoration:none" href="jobSearch.html">Job Search</a></li>
+      <li><a style="text-decoration:none; font-size: 24px;" href= "../index.html">Home</a></li>
+			<li><a style="text-decoration:none; font-size: 24px;" href="resources.html">ID Resources</a></li>
+			<li><a style="text-decoration:none; font-size: 24px;" href="jobSearch.html">Job Search</a></li>
 		</ul>
-		<hr>
+  <hr>
 
   <h1>Search Birth Certificate Offices Per County</h1>
   <script type="text/javascript">
@@ -77,24 +77,7 @@
       }
 
        request.send();
-      // const { SearchClient, AzureKeyCredential} = require("@azure/search-documents");
-      // const indexName="h4h-search-index";
-      // const apiKey = "FEFB1D252AF38F4BB7C77ED36BF7BFD2";
-      // const client = new SearchClient("https://my-h4h-job-search.search.windows.net/",indexName, new AzureKeyCredential(apiKey));
-      // async function maint() {
-      //   alert("Hi");
-      //
-      //   // //const indexName="nycjobs";
-      //   // //const apiKey="252044BE3886FE4A8E"
-      //
-      //
-      //   const searchResults = await client.search("Santa", { top: 3 });
-      //   alert("Hi again");
-        // for await (const result of searchResults.results) {
-        //   console.log(result);
-        // }
-      //}
-      //main();
+
       }
   </script>
 
