--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<title>Hack for Humanity</title>
-        <h1><a style="text-decoration:none; font-size: 60px;" href= "../index.html">Re-Entry Resort</a></h1>
+		<title>Re-Entry Hub</title>
+        <h1><a style="text-decoration:none; font-size: 60px;" href= "../index.html">Re-Entry Hub</a></h1>
         <hr>
 		<ul class="navigationBar">
-			<li><a style="text-decoration:none" href= "index.html">Home</a></li>
-			<li><a style="text-decoration:none" href="html/resources.html">ID Resources</a></li>
-			<li><a style="text-decoration:none" href="html/jobSearch.html">Job Search</a></li>
+			<li><a style="text-decoration:none; font-size: 24px;" href= "index.html">Home</a></li>
+			<li><a style="text-decoration:none; font-size: 24px;" href="html/resources.html">ID Resources</a></li>
+			<li><a style="text-decoration:none; font-size: 24px;" href="html/jobSearch.html">Job Search</a></li>
         </ul>
         <hr>
 
 
 		<img src="images/sun.png" height="261px" width="450px" source = "text-align: center;">
-		<p>
+		<p style = "text-align:center;">
 			Welcome!
 			Getting identification after prison shouldn&#x27t be hard. We&#x27re here to help
 			you navigate the entire process in all counties in California. Please
-			view the "Guidelines" page for more information! <br>In addition, check out our Job Search tab, which provides resources to make your job search easier!
+			view the "ID Resources" page for more information! <br>In addition, check out our Job Search tab, which provides resources to make your job search easier!
 		</p>
 
 		<!-- <p>
