--- a/html/jobSearch.html
+++ b/html/jobSearch.html
@@ -13,16 +13,18 @@
         </head>
         <body>
                 <!-- Title bar showing name -->
-                <title>Hack for Humanity</title>
-                <h1><a style="text-decoration:none; font-size: 60px;" href= "../index.html">Re-Entry Resort</a></h1>
+                <title>Re-Entry Hub </title>
+                <h1><a style="text-decoration:none; font-size: 60px;" href= "../index.html">Re-Entry Hub</a></h1>
+
                 <hr>
                 <!-- Navigation bar -->
                 <ul class="navigationBar">
-                  <li><a style="text-decoration:none" href= "../index.html">Home</a></li>
-                  <li><a style="text-decoration:none" href="resources.html">ID Resources</a></li>
-                  <li><a style="text-decoration:none" href="jobSearch.html">JobSearch</a></li>
+            			<li><a style="text-decoration:none; font-size: 24px;" href= "../index.html">Home</a></li>
+            			<li><a style="text-decoration:none; font-size: 24px;" href="resources.html">ID Resources</a></li>
+            			<li><a style="text-decoration:none; font-size: 24px;" href="jobSearch.html">Job Search</a></li>
                 </ul>
                 <hr>
+                <h2 style="text-align:center;">Search for unemployment offices near you </h2>
 
 
                 <div id="map" style="width: 100%; height: 400px;"></div>
@@ -105,7 +107,7 @@
 
 
 
-                <p>Use the map below to find an unemployment office near you! Below, you can also find a list of re-entry programs for California former offenders.</p>
+                <p>Use the map above to find an unemployment office near you! Below, you can also find a list of re-entry programs for California former offenders.</p>
 
                 <a href="http://jailstojobs.org/html/ca_training_benefits.html" style="float: left;">Jail to Jobs - California Training Benefits Program</a><br>
                 <a href="http://hirenetwork.org/content/california" style="float: left;">California National HIRE Network</a><br>
