--- a/html/resources.html
+++ b/html/resources.html
@@ -10,16 +10,16 @@
 	</head>
 	<body>
 		<!-- Title bar showing name -->
-		<title>Hack for Humanity</title>
-		<h1><a style="text-decoration:none; font-size: 60px;" href= "../index.html">Re-Entry Resort</a></h1>
+		<title>Re-Entry Hub</title>
+		<h1><a style="text-decoration:none; font-size: 60px;" href= "../index.html">Re-Entry Hub</a></h1>
 		<hr>
 
 		<!-- Navigation bar -->
 		<ul class="navigationBar">
-			<li><a style="text-decoration:none" href= "../index.html">Home</a></li>
-			<li><a style="text-decoration:none" href="resources.html"> ID Resources</a></li>
-			<li><a style="text-decoration:none" href="jobSearch.html">Job Search</a></li>
-		</ul>
+			<li><a style="text-decoration:none; font-size: 24px;" href= "../index.html">Home</a></li>
+			<li><a style="text-decoration:none; font-size: 24px;" href="resources.html">ID Resources</a></li>
+			<li><a style="text-decoration:none; font-size: 24px;" href="jobSearch.html">Job Search</a></li>
+        </ul>
 		<hr>
 
 		<!-- <h2>Overview</h2>
